Fix some feature

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
+@import '~antd/dist/antd.css';
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  z-index: 1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  height: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.content {
+  margin-top: 128px;
+  overflow: hidden;
+}
+
+
+/* COntent */
+.Layout {
   color: white;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.site-card-wrapper {
+  margin-top: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+/* Navbar */
+.header .container .logo h1 {
+  color: white;
 }
